update safe to use api key

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,13 @@ CHAIN_ID=1
 # You can find this at https://app.safe.global/
 SAFE_ADDRESS=0xYourSafeAddressHere
 
+# Safe API Key (required)
+# Get it from: https://developer.safe.global/
+# 1. Sign up / log in
+# 2. Create a new project
+# 3. Copy the API key
+SAFE_API_KEY=your_safe_api_key_here
+
 # --------------------------------------------------
 # ALCHEMY WEBHOOKS (for incoming transaction notifications)
 # --------------------------------------------------
