pivot to private key wallet approach

--- a/.env.example
+++ b/.env.example
@@ -1,66 +1,51 @@
 # ==================================================
 # Konami Wallet Bot Configuration
 # ==================================================
-# Copy this file to .env and fill in your values
 
 # --------------------------------------------------
 # TELEGRAM BOT
 # --------------------------------------------------
-# Create a bot via @BotFather on Telegram
-# 1. Start chat with @BotFather
-# 2. Send /newbot
-# 3. Follow prompts to get your token
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+# Get from @BotFather
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 
-# Group ID where the bot will send notifications
-# To get this:
-# 1. Add @RawDataBot to your group
-# 2. It will show you the group ID (starts with -)
-# 3. Remove @RawDataBot after
+# Group ID for notifications (optional)
+# Add @RawDataBot to your group to get the ID
 TELEGRAM_GROUP_ID=-1001234567890
 
+# Authorized Telegram user IDs (comma-separated)
+# Use /whoami command to get your ID
+AUTHORIZED_USERS=123456789,987654321
+
+# Number of approvals required for withdrawals
+REQUIRED_APPROVALS=2
+
 # --------------------------------------------------
-# ETHEREUM / BLOCKCHAIN
+# WALLET
 # --------------------------------------------------
-# Get an RPC URL from Alchemy: https://dashboard.alchemy.com/
-# Select your network and copy the HTTPS URL
+# Private key of the wallet (WITH 0x prefix)
+# This wallet will be controlled by the bot
+WALLET_PRIVATE_KEY=0x...
+
+# --------------------------------------------------
+# ETHEREUM
+# --------------------------------------------------
+# RPC URL (Alchemy, Infura, etc.)
 RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY
 
-# Chain ID (1 = mainnet, 11155111 = sepolia, 137 = polygon, 42161 = arbitrum, 8453 = base)
+# Chain ID (1=mainnet, 11155111=sepolia, 137=polygon, etc.)
 CHAIN_ID=1
 
 # --------------------------------------------------
-# GNOSIS SAFE
+# WEBHOOKS (Optional)
 # --------------------------------------------------
-# Your Safe multisig address
-# You can find this at https://app.safe.global/
-SAFE_ADDRESS=0xYourSafeAddressHere
+# Your server domain (for Telegram webhooks - faster than polling)
+# Leave empty to use polling mode
+DOMAIN=
 
-# Safe API Key (required)
-# Get it from: https://developer.safe.global/
-# 1. Sign up / log in
-# 2. Create a new project
-# 3. Copy the API key
-SAFE_API_KEY=your_safe_api_key_here
-
-# --------------------------------------------------
-# ALCHEMY WEBHOOKS (for incoming transaction notifications)
-# --------------------------------------------------
-# To receive real-time notifications when ETH is received:
-#
-# 1. Go to https://dashboard.alchemy.com/webhooks
-# 2. Click "Create Webhook"
-# 3. Select "Address Activity"
-# 4. Enter your Safe address
-# 5. Set webhook URL to: https://your-server.com/webhook/alchemy
-# 6. Copy the signing key below
-#
-# Note: You'll need to expose your server publicly (use ngrok for testing,
-# or deploy to a VPS/cloud service for production)
-ALCHEMY_WEBHOOK_SIGNING_KEY=your_webhook_signing_key
+# Alchemy webhook signing key (for incoming TX notifications)
+ALCHEMY_WEBHOOK_SIGNING_KEY=
 
 # --------------------------------------------------
 # SERVER
 # --------------------------------------------------
-# Port for the webhook server
 PORT=3000
