add chatbot functionality

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,17 @@ DOMAIN=
 ALCHEMY_WEBHOOK_SIGNING_KEY=
 
 # --------------------------------------------------
+# AI CHAT (Optional)
+# --------------------------------------------------
+# OpenRouter API key for conversational AI
+# Get from: https://openrouter.ai/keys
+OPENROUTER_API_KEY=
+
+# Model to use (default: free Dolphin Mistral)
+# See https://openrouter.ai/models for options
+OPENROUTER_MODEL=cognitivecomputations/dolphin-mistral-24b-venice-edition:free
+
+# --------------------------------------------------
 # SERVER
 # --------------------------------------------------
 PORT=3000
